--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,11 +9,13 @@ body {
   color: #333;
 }
 
-.hero-unit {
+.game {
   margin: 50px auto 0 auto;
-  width: 600px;
-  font-size: 18px;
+  width: 1000px;
+  overflow: auto;
+  font-size: 16px;
   font-weight: 200;
+  text-align: center;
   line-height: 30px;
   background-color: #eee;
   border-radius: 6px;
@@ -23,4 +25,17 @@ body {
     line-height: 1;
     letter-spacing: -1px;
   }
+  .dog {
+    float: left;
+    width: 200px;
+    height: 300px;
+    background-color: yellow;
+  }
+  .cat {
+    float: right;
+    width: 200px;
+    height: 300px;
+    background-color: yellow;
+  }
+
 }
