--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,32 +30,38 @@ body {
   float: left;
   width: 200px;
   height: 500px;
-
+//large dog image
   .dog {
     float: left;
     width: 200px;
     height: 200px;
     margin-left: 106px;
-  }
 
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50px;
+    }
+  }
+//thumbnail dog images
   .goodies {
     float: left;
     width: 400px;
     height: 100px;
-    margin-top: 20px;
+    margin-top: 50px;
 
     li {
       float: left;
       display: inline-block;
       width: 100px;
-      height: 100px;
+      height: 300px;
       margin-right: 20px;
       list-style: none;
-      background-color: grey;
 
       img {
         width: 100px;
         height: 100px;
+        border-radius: 50px;
       }
     }
   }
@@ -65,33 +71,36 @@ body {
   float: right;
   width: 200px;
   height: 500px;
-
+//large cat image
   .cat {
     float: right;
     width: 200px;
     height: 200px;
     margin-right: 106px;
-    background-color: yellow;
-  }
 
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50px;
+    }
+  }
+//thumbnail cat images
   .baddies {
     float: right;
     width: 400px;
     height: 100px;
-    margin-top: 20px;
+    margin-top: 50px;
 
     li {
       float: left;
       display: inline-block;
-      width: 100px;
-      height: 100px;
       margin-right: 10px;
       list-style: none;
-      background-color: grey;
 
       img {
         width: 100px;
         height: 100px;
+        border-radius: 50px;
       }
     }
   }
