--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,7 +14,8 @@ body {
 }
 
 .game {
-  margin: 50px auto 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 1000px;
   overflow: hidden;
   font-size: 16px;
@@ -23,9 +24,9 @@ body {
   padding: 60px;
 
   h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+    font-size: 100px;
+    color: black;
+    text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
   }
 
 .left {
@@ -64,7 +65,6 @@ body {
       }
     }
   }
-
 }
 
 .right {
