--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,11 +11,33 @@ $jacques: 'Jacques Francois Shadow', cursive;
 body {
   font-family: $english;
   color: green;
+}
+
+.door {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url(http://t1.gstatic.com/images?q=tbn:ANd9GcS3fgYHx-v9gwc-VkrmpuPHLUWIJSt1Bn1ApR6r7nDLPpMRKjZ4) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  z-index: 3;
+
+  #enter {
+    width: 20%;
+    height: 60px;
+    font-size: 20px;
+  }
+}
+
+.gameOn {
+  position: relative;
   background: url(http://www.tatouagedesigns.com/photos/22164P-2T.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-}
+  z-index: 2;
+  overflow: hidden;
 
 .game {
   margin-left: auto;
@@ -40,6 +62,7 @@ body {
     color: red;
   }
 }
+
 .left {
   float: left;
   width: 350px;
@@ -78,7 +101,6 @@ body {
     }
   }
 }
-
 .right {
   float: right;
   width: 350px;
@@ -116,4 +138,6 @@ body {
       }
     }
   }
+}
+
 }
