--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,12 +24,13 @@ body {
   z-index: 3;
 
   #enter {
-    width: 20%;
-    height: 60px;
-    margin-left: 40%;
-    margin-top: 23%;
+    width: 10%;
+    height: 50px;
+    margin-left: 45%;
+    margin-top: 337px;
     font-size: 20px;
     vertical-align: middle;
+    background-color: HSLA(21, 38%, 91%, 1)
   }
 }
 
@@ -105,6 +106,16 @@ body {
     }
   }
 }
+
+#fight {
+  width: 20%;
+  border-radius: 30px;
+  margin-top: 55px;
+  font-family: $sancreek;
+  color: red;
+  background-color: yellow;
+}
+
 .right {
   float: right;
   width: 350px;
