--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,6 +69,7 @@ body {
 }
 
 .left {
+  display: block;
   float: left;
   width: 350px;
   margin-left: 3.5%;
@@ -108,17 +109,38 @@ body {
   }
 }
 
+.buttons {
+ display: inline-block;
+ position: relative;
+ width: 200px;
+ border-radius: 50px;
+
+}
+
 #fight {
-  width: 20%;
+  width: 70%;
   border-radius: 30px;
   margin-top: 55px;
   margin-right: 1.5%;
   font-family: $sancreek;
   color: red;
   background-color: yellow;
+  z-index: 2;
 }
 
+#refresh {
+  width: 70%;
+  border-radius: 20px;
+  margin-right: 1.5%;
+  font-family: $sancreek;
+  color: red;
+  background-color: yellow;
+  z-index: 1;
+}
+
+
 .right {
+  display: inline-block;
   float: right;
   width: 350px;
   margin-right: 1%;
